Fix the layout to be mobile friendly.

--- a/_posts/2011-04-17-java-ray.md
+++ b/_posts/2011-04-17-java-ray.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: JavaRay - Ray Tracing in Java
+tags: java raytracing
 ---
 I've been tinkering around lately with Java, and trying to catch up on the last 8 years I've missed. I was first introduced to Java in 2002 at UNC-CH, but it was nothing like the Java today.
 
